--- a/Assignment_widgets.ipynb
+++ b/Assignment_widgets.ipynb
@@ -2,10 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "id": "4b91d492",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'jupyros'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mjupyros\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mjr\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mrospy\u001b[39;00m\n\u001b[0;32m      3\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mnav_msgs\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mmsg\u001b[39;00m \u001b[39mimport\u001b[39;00m Odometry\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'jupyros'"
+     ]
+    }
+   ],
    "source": [
     "import jupyros as jr\n",
     "import rospy\n",
@@ -111,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "f007db2d",
    "metadata": {},
    "outputs": [
@@ -138,8 +150,11 @@
     }
    ],
    "source": [
-    "button_start = Button(description = \"START!\", button_style = \"success\")\n",
-    "button_stop = Button(description = \"STOP!\", disabled = True, button_style = \"danger\")\n",
+    "# Create start and stop buttons\n",
+    "button_start = Button(description=\"START!\", button_style=\"success\")\n",
+    "button_stop = Button(description=\"STOP!\", disabled=True, button_style=\"danger\")\n",
+    "\n",
+    "# Assign functions to buttons click\n",
     "\n",
     "def on_button_start_clicked(b):\n",
     "    global targets_x, targets_y\n",
@@ -147,12 +162,11 @@
     "    goal.target_pose.pose.position.x = x.value\n",
     "    goal.target_pose.pose.position.y = y.value\n",
     "\n",
-    "    #update target lists\n",
+    "    # Update target lists\n",
     "    targets_x.append(x.value)\n",
     "    targets_y.append(y.value)\n",
     "\n",
-    "\n",
-    "    #send the goal returned by set_goal()\n",
+    "    # Send the goal \n",
     "    client.send_goal(goal)\n",
     "\n",
     "    x.disabled = True\n",
@@ -168,28 +182,32 @@
     "    button_start.disabled = False\n",
     "    button_stop.disabled = True\n",
     "    \n",
-    "    \n",
-    "\n",
     "# Create the action client\n",
     "client = actionlib.SimpleActionClient('/reaching_goal', assignment_2_2022.msg.PlanningAction)\n",
     "\n",
-    "# Waits the server to be ready\n",
+    "# Wait for the server to be ready\n",
     "client.wait_for_server()\n",
+    "\n",
+    "# Create the goal object\n",
     "goal = assignment_2_2022.msg.PlanningGoal()\n",
+    "\n",
+    "\n",
     "print(\"Insert the x and y position of the target or c to cancel\")\n",
-    "    \n",
-    "x = widgets.FloatText(description = \"x:\")\n",
-    "y = widgets.FloatText(description = \"y:\")\n",
     "\n",
+    "x = widgets.FloatText(description=\"x:\")\n",
+    "y = widgets.FloatText(description=\"y:\")\n",
     "\n",
+    "# Assign functions to button clicks\n",
     "button_start.on_click(on_button_start_clicked)\n",
     "button_stop.on_click(on_button_stop_clicked)\n",
-    "HBox([VBox([x,y]),VBox([button_start, button_stop])])"
+    "\n",
+    "# Create the widget layout\n",
+    "HBox([VBox([x, y]), VBox([button_start, button_stop])])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "627ccce4",
    "metadata": {},
    "outputs": [
@@ -216,9 +234,12 @@
     }
    ],
    "source": [
-    "# Subscriber\n",
+    "\n",
     "get_ipython().run_line_magic('matplotlib', 'widget')\n",
+    "# Create the visualiser\n",
     "vis = Visualiser()\n",
+    "\n",
+    "# Subscribe to the odometry topic\n",
     "jr.subscribe('/odom', Odometry, vis.odom_callback)\n",
     "ani = FuncAnimation(vis.fig, vis.update_plot, init_func=vis.plot_init)\n",
     "plt.figure(1)\n",
@@ -227,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "acc9cc62",
    "metadata": {},
    "outputs": [
@@ -268,10 +289,12 @@
     }
    ],
    "source": [
+    "# Subscribe to the result topic\n",
     "jr.subscribe('/reaching_goal/result', assignment_2_2022.msg.PlanningActionResult, callback)\n",
     "\n",
     "get_ipython().run_line_magic('matplotlib', 'widget')\n",
     "\n",
+    "# Create the button to update the graph\n",
     "button_update = widgets.Button(description = \"Update graph!\", button_style = \"success\")\n",
     "\n",
     " \n",
@@ -296,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "7a4730c3",
    "metadata": {},
    "outputs": [
@@ -346,6 +369,7 @@
    "source": [
     "get_ipython().run_line_magic('matplotlib', 'widget')\n",
     "\n",
+    "# Create the button to update the graph\n",
     "button_targets = Button(description = \"Update graph!\", button_style = \"success\")\n",
     "\n",
     "def on_button_update_targets(b):\n",
@@ -366,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "id": "fcc9f4fd",
    "metadata": {},
    "outputs": [
@@ -393,31 +417,37 @@
     }
    ],
    "source": [
+    "# Create the labels\n",
     "d_label = widgets.Label(value=\"Distance:\", layout=widgets.Layout(width='150px'))\n",
     "ang_label = widgets.Label(value=\"Angle:\", layout=widgets.Layout(width='150px'))\n",
     "\n",
+    "# Create the widgets\n",
     "dist = widgets.HTML(layout=widgets.Layout(width='100px'))\n",
     "ang = widgets.HTML(layout=widgets.Layout(width='100px'))\n",
     "\n",
+    "# Set the thresholds fqor the distance and angle\n",
     "d_threshold = 1\n",
     "angle_threshold = 0.5\n",
     "\n",
     "def laserCallback(scan):\n",
     "    d_range = 100\n",
     "    a_range = 100\n",
+    "    # Find the closest obstacle\n",
     "    for at, x in enumerate(scan.ranges):\n",
+    "        # Check if the distance is smaller than the current minimum\n",
     "        if x < d_range and x > scan.range_min:\n",
     "            d_range = x\n",
     "            a_range = scan.angle_min + scan.angle_increment * at\n",
-    "            \n",
+    "    # Update the values of the widgets\n",
+    "    \n",
     "    dist.value = f\"<span style='color: {'red' if d_range < d_threshold else 'green'};'>{d_range}</span>\"\n",
     "    ang.value = f\"<span style='color: {'red' if abs(a_range) < angle_threshold else 'green'};'>{a_range}</span>\"\n",
     "\n",
     "\n",
-    "\n",
+    "# Subscribe to the laser scan topic\n",
     "jr.subscribe('/scan', LaserScan, laserCallback)\n",
     "\n",
-    "\n",
+    "# Create the widget for th title\n",
     "title_label = widgets.Label(value=\"Closest Obstacle\", layout=widgets.Layout(width='200px'))\n",
     "display(widgets.VBox([title_label, widgets.HBox([d_label, dist]), widgets.HBox([ang_label, ang])]))\n"
    ]
@@ -447,7 +477,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
