--- a/Assignment_widgets.ipynb
+++ b/Assignment_widgets.ipynb
@@ -1,23 +1,27 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "6c0e9d99",
+   "metadata": {},
+   "source": [
+    "# RT_2 Widgets"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "21271708",
+   "metadata": {},
+   "source": [
+    "## Initialize node, libraries, class visualizer, useful variables"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "4b91d492",
+   "id": "e11697d4",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'jupyros'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[1], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mjupyros\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mjr\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mrospy\u001b[39;00m\n\u001b[0;32m      3\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mnav_msgs\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mmsg\u001b[39;00m \u001b[39mimport\u001b[39;00m Odometry\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'jupyros'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import jupyros as jr\n",
     "import rospy\n",
@@ -114,41 +118,23 @@
     "rospy.init_node('client_node_a')\n",
     "\n",
     "# Publisher to publish the custom message\n",
-    "pub = rospy.Publisher(\"/info_rob\", Info_rob, queue_size=10)\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
+    "pub = rospy.Publisher(\"/info_rob\", Info_rob, queue_size=10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "704c7f0c",
+   "metadata": {},
+   "source": [
+    "## Create buttons for Goals"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "f007db2d",
+   "execution_count": 2,
+   "id": "5f8fb8fc",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Insert the x and y position of the target or c to cancel\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9e717014f06f4f65b338efc7482904a5",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(VBox(children=(FloatText(value=0.0, description='x:'), FloatText(value=0.0, description='y:')))…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Create start and stop buttons\n",
     "button_start = Button(description=\"START!\", button_style=\"success\")\n",
@@ -192,7 +178,7 @@
     "goal = assignment_2_2022.msg.PlanningGoal()\n",
     "\n",
     "\n",
-    "print(\"Insert the x and y position of the target or c to cancel\")\n",
+    "\n",
     "\n",
     "x = widgets.FloatText(description=\"x:\")\n",
     "y = widgets.FloatText(description=\"y:\")\n",
@@ -200,94 +186,23 @@
     "# Assign functions to button clicks\n",
     "button_start.on_click(on_button_start_clicked)\n",
     "button_stop.on_click(on_button_stop_clicked)\n",
-    "\n",
-    "# Create the widget layout\n",
-    "HBox([VBox([x, y]), VBox([button_start, button_stop])])\n"
+    "\n"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "627ccce4",
+   "cell_type": "markdown",
+   "id": "5d3dec21",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cf909570e2044c0583ad0837ed711a75",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Removing previous callback, only one redirection possible right now\n"
-     ]
-    }
-   ],
    "source": [
-    "\n",
-    "get_ipython().run_line_magic('matplotlib', 'widget')\n",
-    "# Create the visualiser\n",
-    "vis = Visualiser()\n",
-    "\n",
-    "# Subscribe to the odometry topic\n",
-    "jr.subscribe('/odom', Odometry, vis.odom_callback)\n",
-    "ani = FuncAnimation(vis.fig, vis.update_plot, init_func=vis.plot_init)\n",
-    "plt.figure(1)\n",
-    "plt.show(block=False)\n"
+    "## Create button and figure for target cancelled and reached"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "acc9cc62",
+   "execution_count": 3,
+   "id": "8e80cd73",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Removing previous callback, only one redirection possible right now\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "55b4713e9024436e819dd5c272e6f6fc",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Button(button_style='success', description='Update graph!', style=ButtonStyle())"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f5f48e7c7dae4aa294ec526a43443160",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Subscribe to the result topic\n",
     "jr.subscribe('/reaching_goal/result', assignment_2_2022.msg.PlanningActionResult, callback)\n",
@@ -313,59 +228,23 @@
     "    plt.show()\n",
     "\n",
     " \n",
-    "button_update.on_click(on_button_update_clicked)\n",
-    "display(button_update)"
+    "button_update.on_click(on_button_update_clicked)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f282392c",
+   "metadata": {},
+   "source": [
+    "## Create button and figure for all targets set"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "7a4730c3",
+   "execution_count": 4,
+   "id": "15c323fa",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a45de732605a473fba3ca543bc421e54",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Button(button_style='success', description='Update graph!', style=ButtonStyle())"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fb580d5dd2a64666b30e41a3e9fbdf98",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f9d68214dc71489b894cdaa9918d10d4",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "get_ipython().run_line_magic('matplotlib', 'widget')\n",
     "\n",
@@ -385,37 +264,23 @@
     "\n",
     "  \n",
     "button_targets.on_click(on_button_update_targets)\n",
-    "display(button_targets)"
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "155bf007",
+   "metadata": {},
+   "source": [
+    "## Create widget for see distance and angle of closest obstacle"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "fcc9f4fd",
+   "execution_count": 5,
+   "id": "b7b906af",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Removing previous callback, only one redirection possible right now\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fb23b1b8adc04f92973e4b9be570fc50",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "VBox(children=(Label(value='Closest Obstacle', layout=Layout(width='200px')), HBox(children=(Label(value='Dist…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Create the labels\n",
     "d_label = widgets.Label(value=\"Distance:\", layout=widgets.Layout(width='150px'))\n",
@@ -449,16 +314,189 @@
     "\n",
     "# Create the widget for th title\n",
     "title_label = widgets.Label(value=\"Closest Obstacle\", layout=widgets.Layout(width='200px'))\n",
-    "display(widgets.VBox([title_label, widgets.HBox([d_label, dist]), widgets.HBox([ang_label, ang])]))\n"
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "68f0ce25",
+   "metadata": {},
+   "source": [
+    "## Display all widgets"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "ebe932e0",
+   "execution_count": 6,
+   "id": "c968916d",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Insert the x and y position of the target or c to cancel\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "e37522ae5cac47079498ec2520e2e2ca",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(VBox(children=(FloatText(value=0.0, description='x:'), FloatText(value=0.0, description='y:')))…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "print(\"Insert the x and y position of the target or c to cancel\")\n",
+    "# Create the widget layout\n",
+    "HBox([VBox([x, y]), VBox([button_start, button_stop])])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "81a1aa55",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "889913666d7f4482a675a6355550050d",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "get_ipython().run_line_magic('matplotlib', 'widget')\n",
+    "\n",
+    "# Create the visualiser\n",
+    "vis = Visualiser()\n",
+    "\n",
+    "# Subscribe to the odometry topic\n",
+    "jr.subscribe('/odom', Odometry, vis.odom_callback)\n",
+    "\n",
+    "ani = FuncAnimation(vis.fig, vis.update_plot, init_func=vis.plot_init)\n",
+    "plt.figure(1)\n",
+    "plt.show(block=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "2c7dbd20",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "b28b8e5879a64d14b5be0a5099a0187b",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Button(button_style='success', description='Update graph!', style=ButtonStyle())"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "980459b27b4348db84e9bafaf027fa32",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "display(button_update)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "1d1144ca",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "92dd8cc807c14f9a9addf3762a78639a",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Button(button_style='success', description='Update graph!', style=ButtonStyle())"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "3b155bd361eb4c97b20f7940c336e6c9",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "display(button_targets)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "91f98215",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "d23a27c89f9248d895568b2e47d4dfb3",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(Label(value='Closest Obstacle', layout=Layout(width='200px')), HBox(children=(Label(value='Dist…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "display(widgets.VBox([title_label, widgets.HBox([d_label, dist]), widgets.HBox([ang_label, ang])]))"
+   ]
   }
  ],
  "metadata": {
@@ -477,7 +515,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
